[package]
name = "root"
version = "0.1.0"

[workspace]
members = [
  "prisma-models",
  "migration-engine/connectors/migration-connector",
  "migration-engine/connectors/sql-migration-connector",
  "migration-engine/core",
  "query-engine/connectors/connector",
  "query-engine/connectors/sql-connector",
  "query-engine/prisma",
  "query-engine/native-bridge",
  "query-engine/core",
  "prisma-fmt",
  "libs/datamodel",
  "libs/prisma-inflector",
]

[build-dependencies]
rustc_version = "0.2.3"