[workspace]
members = [
  "prisma-models",
  "migration-engine/connectors/migration-connector",
  "migration-engine/connectors/sql-migration-connector",
  "migration-engine/core",
  "query-engine/connectors/connector",
  "query-engine/connectors/sql-connector",
  "query-engine/prisma",
  "query-engine/core",
  "prisma-fmt",
  "libs/datamodel",
  "libs/prisma-inflector",
  "libs/database-introspection",
  "libs/prisma-common",
]

[patch.crates-io]
barrel = { git = "https://github.com/aknuds1/barrel.git", branch = "bugfix/fix-index-creation" }
