[package]
name = "migration-engine"
version = "0.1.0"
authors = ["Marcus Böhm <boehm@prisma.io>"]
edition = "2018"

[dependencies]
nullable = { path = "../libs/nullable" }
database-inspector = { path = "../libs/database-inspector" }
chrono = { version = "0.4", features = ["serde"] }
jsonrpc-core = "10.1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
