[package]
name = "database-inspector"
version = "0.1.0"
authors = ["Marcus Böhm <boehm@prisma.io>"]
edition = "2018"

[dependencies]
barrel = { git = "https://github.com/spacekookie/barrel", features = ["sqlite3"] }
rusqlite = { git = "https://github.com/pimeys/rusqlite" }
time = "*"
datamodel = { path = "../datamodel" }
prisma-query = { git = "https://github.com/prisma/prisma-query.git", branch="connector_interfaces" }
serde = "1.0"