[package]
name = "database-introspection"
version = "0.1.0"
authors = ["Arve Knudsen <arve.knudsen@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
chrono = { version = "0.4" }
serde_json = "1.0"
serde = "1.0"
rusqlite = { version = "0.19", features = ["chrono", "bundled"] }
prisma-query = { git = "https://github.com/prisma/prisma-query.git" }
barrel = { version = "0.6.2", features = ["sqlite3", "mysql", "pg"] }
itertools = "0.8"
url = "1.7.2"
postgres = { version = "0.16.0-rc.2", features = ["runtime", "with-serde_json-1", "with-chrono-0_4", "with-uuid-0_7"] }
mysql = { version = "*" }

slog = { version = "2.5", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.3"
slog-json = "2.3"
slog-stdlog = "3.0"
log = { version = "*", features = ["max_level_trace", "release_max_level_info"] }

[dev-dependencies]
fern = "0.5"
