[package]
name = "datamodel"
version = "0.1.0"
authors = ["Emanuel Joebstl <emanuel.joebstl@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
# Temporary until PR is accepted.
pest = { version = "2.1.0", package = 'pest_tmp' }
pest_derive = { version = "2.1.0", package = 'pest_derive_tmp' }
colored = "1.8.0"
chrono = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
failure_derive = "0.1"
