[package]
name = "introspection-command"
version = "0.1.0"
authors = ["Arve Knudsen <arve.knudsen@gmail.com>"]
edition = "2018"

[dependencies]
database-introspection = { path = "../../libs/database-introspection" }
failure = "0.1"
datamodel = { path = "../../libs/datamodel" }
log = "0.4"

[dev-dependencies]
fern = "0.5"
pretty_assertions = "0.6"
