[package]
name = "prisma-common"
version = "0.0.0"
authors = ["Dominic Petrick <petrick@prisma.io>", "Julius de Bruijn <bruijn@prisma.io>", "Marcus Böhm <boehm@prisma.io>" ]
edition = "2018"

[dependencies]
serde_derive = "1.0"
serde_yaml = "0.8"
serde = "1.0"
url = "1.7"
url_serde = "0.2"
uuid = "0.7"
failure = "0.1"
failure_derive = "0.1"
regex = "1.1"