[package]
name = "prisma-common"
version = "0.0.0"
authors = ["Dominic Petrick <petrick@prisma.io>", "Julius de Bruijn <bruijn@prisma.io>", "Marcus Böhm <boehm@prisma.io>" ]
edition = "2018"

[dependencies]
serde_derive = "1.0"
serde_yaml = "0.8"
serde = "1.0"
url = "1.7"
url_serde = "0.2"
uuid = "0.7"
failure = "0.1"
failure_derive = "0.1"
regex = "1.1"
datamodel = { path = "../datamodel" }
metrics-runtime = "0.1"

slog = { version = "2.5", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.3"
slog-json = "2.3"
slog-scope = "4.1"
slog-stdlog = "3.0"
slog-term = "2.4"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
