[package]
name = "r2d2-sqlite3"
version = "0.0.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
license = "MIT"
description = "Sqlite support for the r2d2 connection pool"
repository = "https://github.com/prisma/r2d2-sqlite3"
documentation = "https://docs.rs/r2d2-sqlite3/"
keywords = ["sqlite3", "r2d2", "pool"]
edition = "2018"

[dependencies]
r2d2 = "0.8"
sqlite = "0.24"

[dev-dependencies]
tempdir = "0.3"
