[package]
name = "migration-core"
version = "0.1.0"
authors = ["Marcus Böhm <boehm@prisma.io>"]
edition = "2018"

[dependencies]
migration-connector = { path = "../connectors/migration-connector" }
datamodel = { path = "../../libs/datamodel" }
prisma-models = { path = "../../prisma-models" }
chrono = { version = "0.4", features = ["serde"] }
jsonrpc-core = "11.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
boolinator = "2.4.0"
sql-migration-connector = { path = "../connectors/sql-migration-connector" }

[dev-dependencies]
prisma-query = { git = "https://github.com/prisma/prisma-query.git" }
barrel = { version = "0.6.2", features = ["sqlite3", "mysql", "pg"] }

[[bin]]
name = "migration-engine"
path = "src/bin/rpc_api_bin.rs"
