[package]
name = "migration-core"
version = "0.1.0"
authors = ["Marcus Böhm <boehm@prisma.io>", "Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"

[dependencies]
migration-connector = { path = "../connectors/migration-connector" }
datamodel = { path = "../../libs/datamodel" }
prisma-models = { path = "../../prisma-models" }
sql-migration-connector = { path = "../connectors/sql-migration-connector" }
clap = "2.33"
prisma-common = { path = "../../libs/prisma-common" }

chrono = { version = "0.4", features = ["serde"] }
boolinator = "2.4.0"
url = "1.7"
log = "0.4"
env_logger = "0.6"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

failure = "0.1"
failure_derive = "0.1"

jsonrpc-core = "13.0"
jsonrpc-stdio-server = "13.0"

futures = "0.1"
tokio = "0.1"
tokio-threadpool = "0.1"

[dev-dependencies]
prisma-query = { git = "https://github.com/prisma/prisma-query.git" }
barrel = { version = "0.6.2", features = ["sqlite3", "mysql", "pg"] }

[[bin]]
name = "migration-engine"
path = "src/main.rs"
