[package]
name = "migration-core"
version = "0.1.0"
authors = ["Marcus Böhm <boehm@prisma.io>", "Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
migration-connector = { path = "../connectors/migration-connector" }
datamodel = { path = "../../libs/datamodel" }
prisma-models = { path = "../../prisma-models" }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
boolinator = "2.4.0"
url = "1.7"
sql-migration-connector = { path = "../connectors/sql-migration-connector" }
log = "0.4"
neon = "0.2.0"
neon-serde = "0.1"
failure = "0.1"
failure_derive = "0.1"

[dev-dependencies]
prisma-query = { git = "https://github.com/prisma/prisma-query.git" }
barrel = { version = "0.6.2", features = ["sqlite3", "mysql", "pg"] }

[build-dependencies]
neon-build = "0.2.0"

[lib]
name = "migration_core"
crate-type = ["dylib"]
