[package]
name = "core"
version = "0.1.0"
authors = ["Dominic Petrick <dompetrick@gmail.com>"]
edition = "2018"

[dependencies]
graphql-parser = "0.2.2"
prisma-models = { path = "../../prisma-models" }
prisma-inflector = { path = "../../libs/prisma-inflector" }
connector = { path = "../connectors/connector" }
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1.3"
uuid = "0.7"
indexmap = "1.0"
itertools = "0.8"
serde_json = "1.0"
chrono = "0.4"

[dependencies.rust-inflector]
version = "0.11"
package = "Inflector"
