[package]
name = "core"
version = "0.1.0"
authors = ["Dominic Petrick <dompetrick@gmail.com>", "Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"

[dependencies]
graphql-parser = "0.2.2"
prisma-models = { path = "../../prisma-models" }
prisma-inflector = { path = "../../libs/prisma-inflector" }
connector = { path = "../connectors/connector" }
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1.3"
uuid = "0.7"
indexmap = "1.0"
itertools = "0.8"
# serde = { version = "1.0", features = [ "rc" ] }
serde_json = "1.0"
chrono = "0.4"
once_cell = "0.2"
debug_stub_derive = "0.3"

slog = { version = "2.5", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.3"
slog-json = "2.3"
slog-stdlog = "3.0"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }

[dependencies.rust-inflector]
version = "0.11"
package = "Inflector"
