[package]
name = "migration-connector"
version = "0.1.0"
authors = ["Marcus Böhm <boehm@prisma.io>"]
edition = "2018"

[dependencies]
prisma-datamodel = { path = "../../../libs/prisma-datamodel" }
nullable = { path = "../../../libs/nullable" }
chrono = { version = "0.4" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"