[package]
name = "migration-connector"
version = "0.1.0"
authors = ["Marcus Böhm <boehm@prisma.io>"]
edition = "2018"

[dependencies]
datamodel = { path = "../../../libs/datamodel" }
prisma-query = { git = "https://github.com/prisma/prisma-query" }
chrono = { version = "0.4" }

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

failure = "0.1"
failure_derive = "0.1"
