[package]
name = "sql-migration-connector"
version = "0.1.0"
authors = ["Marcus Böhm <boehm@prisma.io>"]
edition = "2018"

[dependencies]
migration-connector = { path = "../migration-connector" }
datamodel = { path = "../../../libs/datamodel" }
prisma-models = { path = "../../../prisma-models" }
chrono = { version = "0.4" }
database-inspector = { path = "../../../libs/database-inspector" }
serde_json = "1.0"
serde = "1.0"
rusqlite = { git = "https://github.com/pimeys/rusqlite", features = ["chrono", "bundled"] }
prisma-query = { git = "https://github.com/prisma/prisma-query.git", branch = "connector_interfaces" }
barrel = { version = "0.5.8", features = ["sqlite3"] }
itertools = "0.8"
