[package]
name = "sql-migration-connector"
version = "0.1.0"
authors = ["Marcus Böhm <boehm@prisma.io>"]
edition = "2018"

[dependencies]
migration-connector = { path = "../migration-connector" }
datamodel = { path = "../../../libs/datamodel" }
prisma-models = { path = "../../../prisma-models" }
chrono = { version = "0.4" }
database-inspector = { path = "../../../libs/database-inspector" }
serde_json = "1.0"
serde = "1.0"
rusqlite = { git = "https://github.com/pimeys/rusqlite", features = ["chrono", "bundled"] }
prisma-query = { git = "https://github.com/prisma/prisma-query.git" }
barrel = { version = "0.5.8", features = ["sqlite3", "mysql", "pg"] }
itertools = "0.8"
url = "1.7.2"
postgres = { version = "0.16.0-rc.1", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-0_7"] }