[package]
name = "connector"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "0.1"
prisma-query = { git = "https://github.com/prisma/prisma-query.git" }
prisma-models = { path = "../../../prisma-models" }
failure = "0.1"
failure_derive = "0.1"
uuid = "0.7"
itertools = "0.8"
chrono = { version = "0.4", features = ["serde"] }
