[package]
name = "sqlite-connector"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
connector = { path = "../connector" }
prisma-models = { path = "../../../prisma-models" }
prisma-common = { path = "../../../libs/prisma-common" }
itertools = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.16", features = ["chrono", "bundled"] }
prisma-query = { git = "https://github.com/prisma/prisma-query.git" }
r2d2 = "0.8"
r2d2_sqlite = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.7"
uuid = "0.7"
