[package]
name = "sqlite-connector"
version = "0.1.0"
authors = []
edition = "2018"

[features]
default = ["sqlite"]
sqlite = ["rusqlite", "libsqlite3-sys", "r2d2_sqlite"]

[dependencies]
connector = { path = "../connector" }
prisma-models = { path = "../../../prisma-models" }
itertools = "0.8"
chrono = { version = "0.4", features = ["serde"] }
prisma-query = { path = "../../../libs/prisma-query" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.7"
uuid = "0.7"
failure = "0.1"
failure_derive = "0.1"
r2d2 = "0.8"

r2d2_sqlite = { version = "0.8", optional = true }
libsqlite3-sys = {  version = "0.11", optional = true }
rusqlite = { version = "0.16", features = ["chrono", "bundled"], optional = true }
